# vitd

./: .gitignore  AGENTS.md  LEARN.md  README.md  ROADMAP.md  pyproject.toml
docs/: DESIGN_SYSTEM.md  index.html  manifest.json  sw.js
src/vitd/: __init__.py  cli.py  config.py  storage.py
