[project]
name = "vitd"
version = "0.1.0"
description = "Terminal-based Vitamin D deficiency tracker and assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nilesh Suthar" }]
keywords = ["vitamin-d", "health", "cli", "tracker", "deficiency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/nileshsuthar/vitd"

[project.scripts]
vitd = "vitd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
